add all routes | add author impl | remove .idea folder
