# spring-boot-library-api/target/generated-sources/openapi/spring-boot-library-model/com/ensicaen/openapi/api/ClientRetrieverApi.kt
@@ -1,49 +1,0 @@
-/**
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (4.3.1).
- * https://openapi-generator.tech
- * Do not edit the class manually.
-*/
-package com.ensicaen.openapi.api
-
-import com.ensicaen.openapi.springbootlibrary.api.ClientDto
-import com.ensicaen.openapi.springbootlibrary.api.ErrorDto
-import org.springframework.http.HttpStatus
-import org.springframework.http.MediaType
-import org.springframework.http.ResponseEntity
-
-import org.springframework.web.bind.annotation.RequestBody
-import org.springframework.web.bind.annotation.RequestPart
-import org.springframework.web.bind.annotation.RequestParam
-import org.springframework.web.bind.annotation.PathVariable
-import org.springframework.web.bind.annotation.RequestHeader
-import org.springframework.web.bind.annotation.RequestMethod
-import org.springframework.web.bind.annotation.RequestMapping
-import org.springframework.validation.annotation.Validated
-import org.springframework.web.context.request.NativeWebRequest
-import org.springframework.beans.factory.annotation.Autowired
-
-import javax.validation.Valid
-import javax.validation.constraints.DecimalMax
-import javax.validation.constraints.DecimalMin
-import javax.validation.constraints.Max
-import javax.validation.constraints.Min
-import javax.validation.constraints.NotNull
-import javax.validation.constraints.Pattern
-import javax.validation.constraints.Size
-
-import kotlin.collections.List
-import kotlin.collections.Map
-
-@Validated
-@RequestMapping("\${api.base-path:/api/v1}")
-interface ClientRetrieverApi {
-
-
-    @RequestMapping(
-            value = ["/clients"],
-            produces = ["application/json"], 
-            method = [RequestMethod.GET])
-    fun retrieveClients(): ResponseEntity<ClientDto> {
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
-    }
-}
