# spring-boot-library-api/target/generated-sources/openapi/spring-boot-library-model/com/ensicaen/openapi/springbootlibrary/api/ClientDto.kt
@@ -1,24 +1,0 @@
-package com.ensicaen.openapi.springbootlibrary.api
-
-import java.util.Objects
-import com.fasterxml.jackson.annotation.JsonProperty
-import javax.validation.constraints.DecimalMax
-import javax.validation.constraints.DecimalMin
-import javax.validation.constraints.Max
-import javax.validation.constraints.Min
-import javax.validation.constraints.NotNull
-import javax.validation.constraints.Pattern
-import javax.validation.constraints.Size
-
-/**
- * 
- * @param name 
- */
-data class ClientDto(
-
-    @get:NotNull 
-    @JsonProperty("name") val name: kotlin.String
-) {
-
-}
-
